syntax = "proto3";
option go_package =".;protos";

message GetRewardPointsRequest {
    string UserId = 1;
}
message GetRewardPointsResponse {
    uint32 RewardPoints = 1;
}

service Reward {
    rpc GetRewardPoints (GetRewardPointsRequest) returns (GetRewardPointsResponse);
}

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative reward.proto
